# ariac2023

ariac_gazebo/ariac_gazebo/: utilities.py
ariac_gazebo/config/trials/: tutorial.yaml
ariac_gazebo/worlds/: ariac.world
ariac_msgs/: CMakeLists.txt
ariac_msgs/srv/: AgvPartPose.srv  Assemble.srv  Attach.srv  MoveToPos.srv  MultiplyPose.srv  PickPart.srv  PoseStatus.srv  SetJointValueTarget.srv
ariac_plugins/include/ariac_plugins/: task_manager_plugin.hpp
ariac_plugins/src/: conveyor_belt_plugin.cpp  task_manager_plugin.cpp  vacuum_gripper_plugin.cpp
ariac_test/: CMakeLists.txt
ariac_test/ariac_test/: agv.py  ceiling_robot.py  conveyor.py  floor_robot.py  interface.py  robot.py  utils.py
ariac_test/config/: sensors.yaml
ariac_test/include/: robot_commander.hpp
ariac_test/launch/: monitor.py  robot_commander.launch.py
ariac_test/scripts/: test.py  test2.py  test3.py
ariac_test/src/: robot_commander.cpp
ariac_tutorials/: CMakeLists.txt  package.xml
ariac_tutorials/ariac_tutorials/: competition_interface.py  utils.py
ariac_tutorials/launch/: robot_control.launch.py
ariac_tutorials/scripts/: tutorial.py
ariac_tutorials/src/: robot_control.cpp
